# slack-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
slack_mcp/: __init__.py  __main__.py  __setup__.py  credentials.py  server.py  setup.py
tests/: __init__.py  test_block_kit.py  test_function_logic.py  test_integration.py  test_mcp_tools.py
