[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-mcp-server"
version = "1.0.0"
description = "Slack MCP Server for Model Context Protocol APIs"
readme = "README.md"
authors = [
    { name = "Author Name", email = "author@example.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
    "keyring>=24.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["slack_mcp"]

[project.scripts]
slack-mcp-server = "slack_mcp.server:main"
slack-mcp-setup = "slack_mcp.setup:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "PD"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py310"]